--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
 
       <div class="city">
-            <h3>Tel Aviv</h3>
+            <h5>Tel Aviv</h5>
     
             <p>
               Quoting <a href="https://en.wikipedia.org/wiki/Tel_Aviv">Wikipedia</a>:
@@ -124,8 +124,18 @@
             </p>
       </div>
 
+      <a href="https://goo.gl/maps/YLc9t6rx1ySrrVsGA">
+          <h5>TAD Tel Aviv</h5>
+          Check Point Building,<br />
+          2nd floor, room #270<br />
+          P.O. Box 39040, Tel Aviv
+        </a>
+        <br />
+        <br />
+
+      </div>
       <div class="city">
-        <h3>Jerusalem</h3>
+        <h5>Jerusalem</h5>
 
         <p>
           Quoting <a href="https://en.wikipedia.org/wiki/Jerusalem">Wikipedia</a>:
