--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
       <div class="venue">
         <h3>Venue</h3>
         <a href="https://goo.gl/maps/YLc9t6rx1ySrrVsGA">
-          <h5>TAD Tel Aviv</h5>
+          <h5>TAD Tel Aviv</h5></a>
           Check Point Building,<br />
           2nd floor, room #270<br />
           P.O. Box 39040, Tel Aviv
-        </a>
+        
         <br />
         <br />
 
@@ -124,12 +124,13 @@
             </p>
       </div>
 
-      <a href="https://goo.gl/maps/YLc9t6rx1ySrrVsGA">
-          <h5>TAD Tel Aviv</h5>
-          Check Point Building,<br />
-          2nd floor, room #270<br />
-          P.O. Box 39040, Tel Aviv
-        </a>
+      <a href="https://goo.gl/maps/8SqhmmBJ2XAf8xz3A">
+          <h5>The School of Computer Science & Engineering</h5></a>
+          The Hebrew University of Jerusalem,<br />
+          Rothberg Family Buildings,<br />
+          The Edmond J. Safra Campus,<br />
+          9190401 Jerusalem, Israel
+        
         <br />
         <br />
 
