--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="danes_conf.css" />
     <link rel="icon" href="/assets/favicon.png" type="image/png" />
-  </head>
+   </head>
   <body>
 
     <nav>
@@ -30,7 +30,7 @@
       
     <article>
         <div>
-            <h4><center>19–21 February 2023<br /> Hebrew University of Jerusalem & Tel Aviv University, Israel</center>
+            <h4><center>19–21 February 2023 Hebrew University of Jerusalem & Tel Aviv University, Israel</center>
             </h4>
         </div>
     </article>
@@ -159,7 +159,7 @@
          </div>
          </article>
 
-    <article id="Question?">
+    <article id="contact">
       <h2>Contact</h2>
       If you have questions, don't hesitate to contact us: <a href="mailto:digpasts@gmail.com">digpasts@gmail.com</a> or <a href="mailto:luisssaenzs@gmail.com">luisssaenzs@gmail.com</a>.
       <br />
@@ -177,11 +177,12 @@
       <br />
     </footer>
 
+    <center><img src="./assets/DigPasts_logo.jpg" alt="Digital Pasts Lab Logo"><img src="./assets/ariel_university.logo.jpg" alt="Ariel University Logo"><img src="./assets/halle_logo.jpg" alt="Halle University Logo"><img src="./assets/Hebrew_University_new_Logo.jpg" alt="Hebrew University Logo"><img src="./assets/Tel_Aviv_university_logo.jpg" alt="Tel Aviv University Logo"></center>
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.6.0/mapbox-gl.css' rel='stylesheet' />
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.6.0/mapbox-gl.js'></script>
-    <script src="./unconf.js"></script>
 </body>
 </html>
