--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
     </nav>
 
     <header>
-        <h1>FIRST MEETING OF THE DIGITAL ANCIENT<br />NEAR EASTERN STUDIES NETWORK
+        <h1>FIRST MEETING OF THE DIGITAL ANCIENT<br />NEAR EASTERN STUDIES NETWORK <br />
+            <span style="color: #9B55FF">DANES 2023</span>
         </h1>
     </header>
       
     <article>
         <div>
-            <h4><center>19–21 February 2023 Hebrew University of Jerusalem & Tel Aviv University, Israel</center>
+            <h4><center>19–21 February 2023<br /> Israel</center>
             </h4>
         </div>
     </article>
@@ -110,25 +111,25 @@
         <h3>Sunday, February 19 (Tel Aviv)</h3>
         09:30-10:00: Gathering</br>
         10:00-10:15: Opening Remarks, Presenting the DANES research network</br>
-        10:15-11:45: <b>Session 1</b>: Natural Language Processing in Ancient Near Eastern Studies</br> 
+        10:15-11:45: <b>Session 1</b></br> 
         11:45-12:00: Coffee Break</br>
-        12:00-13:00: <b>Session 2</b>: Distant reading and Linked Open Data</br>
+        12:00-13:00: <b>Session 2</b></br>
         13:00-14:30: Lunch Break</br>
-        14:30-16:00: <b>Session 3</b>: Cuneiform Digital Editions</br> 
+        14:30-16:00: <b>Session 3</b>: Workshop</br> 
         16:00-16:15: Coffee Break</br>
-        16:15-17:15: <b>Session 4</b>: Computer vision and OCR</br>
+        16:15-17:15: <b>Session 4</b>: Workshop</br>
         </br>               
         <h3>Monday, February 20 (Jerusalem)</h3>
-        10:00-11:30: <b>Session 5</b>: Computational methods in Material Culture and Geography</br>
+        10:00-11:30: <b>Session 5</b></br>
         11:30-11:45: Coffee Break</br>
-        11:45-12:45: <b>Session 6</b>: Digital Epigraphy and New Applications</br>
+        11:45-12:45: <b>Session 6</b>: In Retrospect</br>
         12:45-14:15: Lunch Break</br>
         14:15-15:15: <b>Session 7</b>: Posters</br>
         15:15-15:30: Coffee Break</br>
         15:30-17:00: <b>Session 8</b>: Critical DH and Computational Methodologies</br>
         </br>    
         <h3>Tuesday, February 21 (Ariel)</h3>
-        10:00-11:30: <b>Session 9:</b> Roundtable</br>
+        10:00-11:30: <b>Session 9:</b> Roundtable (hybrid)</br>
         11:30-12:30: Brunch buffet</br>
         Archaeological Tour of Jerusalem
             
