--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
      <article id="when">
         <h2>When & Where</h2>
-          <p>The conference will be held at the <b>Center for Artificial Intelligence & Data Science</b> (TAD) at Tel Aviv University and the <b>School of Computer Science and Engineering</b>, Hebrew University of Jerusalem between 19-21 February 2023. The final roundtable session will be held at the <b>Digital Pasts Lab</b>, Ariel University.</p>
+          <p>The conference will be held at the <b>Center for Artificial Intelligence & Data Science</b> (TAD) at Tel Aviv University and the <b>School of Computer Science and Engineering</b>, Hebrew University of Jerusalem between 19-21 February 2023. The final roundtable session will be held at the <b>Digital Pasts Lab</b>, Ariel University. Shuttle services will be provided to the different venues.</p>
         
         <div class="a">
           <h3>Venue</h3>
