--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <br />
     </footer>
 
-    <center><img src="./assets/DigPasts_logo.jpg" alt="Digital Pasts Lab Logo"><img src="./assets/ariel_university.logo.jpg" alt="Ariel University Logo"><img src="./assets/halle_logo.jpg" alt="Halle University Logo"><img src="./assets/Hebrew_University_new_Logo.jpg" alt="Hebrew University Logo"><img src="./assets/Tel_Aviv_university_logo.jpg" alt="Tel Aviv University Logo"></center>
+    <center><img src="./assets/DigPasts_logo.jpg" alt="Digital Pasts Lab Logo"><img src="./assets/ariel_university.logo.jpg" alt="Ariel University Logo"><img src="./assets/TAD.png" alt="Tel Aviv University Logo"><img src="./assets/halle_logo.jpg" alt="Halle University Logo"><img src="./assets/Hebrew_University_new_Logo.jpg" alt="Hebrew University Logo"></center>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
