--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         16:00-16:15: Coffee Break</br>
         16:15-17:15: <b>Session 4</b>: Workshop</br>
         </br>               
-        <h3>Monday, February 20 (Jerusalem)</h3>
+        <h3>Monday, February 20 (Ariel)</h3>
         10:00-11:30: <b>Session 5</b></br>
         11:30-11:45: Coffee Break</br>
         11:45-12:45: <b>Session 6</b>: In Retrospect</br>
@@ -128,7 +128,7 @@
         15:15-15:30: Coffee Break</br>
         15:30-17:00: <b>Session 8</b>: Critical DH and Computational Methodologies</br>
         </br>    
-        <h3>Tuesday, February 21 (Ariel)</h3>
+        <h3>Tuesday, February 21 (Archaeological Tour)</h3>
         10:00-11:30: <b>Session 9:</b> Roundtable (hybrid)</br>
         11:30-12:30: Brunch buffet</br>
         Archaeological Tour of Jerusalem
