--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="a">
           <h2>Important Dates</h2>
           <p>
-          ☐ Submission deadline for Speakers: December 1, 2022.<p />
+          <del>☐ Submission deadline for Speakers: December 1, 2022.</del><p />
           ☐ Submission deadline for Posters: January 20, 2023.<p />
           ☐ Conference: February 19-21.
 
@@ -108,31 +108,34 @@
         <h2>Program</h2>
         <div class="a"
         <p>
-        <h3>Sunday, February 19 (Tel Aviv)</h3>
-        09:30-10:00: Gathering</br>
-        10:00-10:15: Opening Remarks, Presenting the DANES research network</br>
-        10:15-11:45: <b>Session 1</b></br> 
+        <h3>Sunday, February 19 (Tel Aviv University)</h3>
+        Center for Artificial Intelligence & Data Science (Tel Aviv University)</br>
+        09:00-10:15: <b>Opening Session & Keynote</b></br>
+        10:15-10:30: Coffee Break</br>
+        10:30-11:45: <b>Session 1</b></br>
         11:45-12:00: Coffee Break</br>
         12:00-13:00: <b>Session 2</b></br>
         13:00-14:30: Lunch Break</br>
-        14:30-16:00: <b>Session 3</b>: Workshop</br> 
+        14:30-16:00: <b>Session 3</b> 
         16:00-16:15: Coffee Break</br>
-        16:15-17:15: <b>Session 4</b>: Workshop</br>
+        16:15-17:45: <b>Session 4</b>: Workshop</br>
+        19:30 <b>Dinner by the sea</b>
         </br>               
-        <h3>Monday, February 20 (Ariel)</h3>
-        10:00-11:30: <b>Session 5</b></br>
-        11:30-11:45: Coffee Break</br>
-        11:45-12:45: <b>Session 6</b>: In Retrospect</br>
-        12:45-14:15: Lunch Break</br>
-        14:15-15:15: <b>Session 7</b>: Posters</br>
-        15:15-15:30: Coffee Break</br>
-        15:30-17:00: <b>Session 8</b>: Critical DH and Computational Methodologies</br>
+        <h3>Monday, February 20 (Ariel University)</h3>
+        Hosted by the Digital Pasts Lab (Ariel University) </br>
+        09:30-10:10: Opening Session & Keynote 
+        10:10-11:00: <b>Session 5</b></br>
+        11:00-11:15: Coffee Break</br>
+        11:15-12:15: <b>Session 6</b>
+        12:15-13:30: Brunch Buffet</br>
+        13:30-14:45: <b>Session 7</b>
+        16:45-16:30: Coffee Break</br>
+        16:30-17:45: <b>Session 8</b>
         </br>    
-        <h3>Tuesday, February 21 (Archaeological Tour)</h3>
-        10:00-11:30: <b>Session 9:</b> Roundtable (hybrid)</br>
-        11:30-12:30: Brunch buffet</br>
-        Archaeological Tour of Jerusalem
-            
+        <h3>Tuesday, February 21 (Judean Shephela)</h3>
+        08:00-13:00: <b>Tour of Lachish adn Tell Burna </b> Roundtable (hybrid)</br>
+        13:00-14:30: Lunch</br>
+        14:30: Closing (open air) forum            
         </p>
       </div>
     </article>    
@@ -151,8 +154,8 @@
           <br />
           
         <a href="https://goo.gl/maps/8SqhmmBJ2XAf8xz3A">
-            <h5>The School of Computer Science & Engineering</h5></a>
-            The Hebrew University of Jerusalem,<br />
+            <h5>The Digital Pasts Lab</h5></a>
+            Ariel University,<br />
             Rothberg Family Buildings,<br />
             The Edmond J. Safra Campus,<br />
             9190401 Jerusalem, Israel
@@ -179,7 +182,7 @@
       <br />
     </footer>
 
-    <center><img src="./assets/DigPasts_logo.jpg" alt="Digital Pasts Lab Logo"><img src="./assets/ariel_university.logo.jpg" alt="Ariel University Logo"><img src="./assets/TAD.png" alt="Tel Aviv University Logo"><img src="./assets/halle_logo.jpg" alt="Halle University Logo"><img src="./assets/Hebrew_University_new_Logo.jpg" alt="Hebrew University Logo"></center>
+    <center><img src="./assets/DigPasts_logo.jpg" alt="Digital Pasts Lab Logo"><img src="./assets/ariel_university.logo.jpg" alt="Ariel University Logo"><img src="./assets/TAD.png" alt="Tel Aviv University Logo"><img src="./assets/halle_logo.jpg" alt="Halle University Logo">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
