--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     
     <article id="when">
         <h2>When & Where</h2>
-          <p>The conference will be held at the <b>Center for Artificial Intelligence & Data Science</b> (TAD) at Tel Aviv University and the <b>School of Computer Science and Engineering</b>, Hebrew University of Jerusalem between 19-21 February 2023. The final roundtable session will be held at the <b>Digital Pasts Lab</b>, Ariel University. Shuttle services will be provided to the different venues.</p>
+          <p>The conference will be held at the <b>Center for Artificial Intelligence & Data Science</b> (TAD) at Tel Aviv University and the <b>Digital Pasts Lab</b>, Ariel University between 19-21 February 2023. The final roundtable session will be held in an (open air) amphitheater (given preferable weather conditions), or the excavation house of Tell Burna. Shuttle services will be provided to the different venues.</p>
         
         <div class="a">
           <h3>Venue</h3>
@@ -156,9 +156,8 @@
         <a href="https://goo.gl/maps/8SqhmmBJ2XAf8xz3A">
             <h5>The Digital Pasts Lab</h5></a>
             Ariel University,<br />
-            Rothberg Family Buildings,<br />
-            The Edmond J. Safra Campus,<br />
-            9190401 Jerusalem, Israel
+            Ramat HaGolan Street 65,<br />
+            4070000 Ariel, Israel
           <br />
          </div>
          </article>
