--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <h2>Program</h2>
         <div class="a"
         <p>
-        <h3>Sunday, February 19 (Tel Aviv University)</h3>
+        <h3>Sunday, February 19</h3>
         Center for Artificial Intelligence & Data Science (Tel Aviv University)</br>
         09:00-10:15: <b>Opening Session & Keynote</b></br>
         10:15-10:30: Coffee Break</br>
@@ -116,24 +116,24 @@
         11:45-12:00: Coffee Break</br>
         12:00-13:00: <b>Session 2</b></br>
         13:00-14:30: Lunch Break</br>
-        14:30-16:00: <b>Session 3</b> 
+        14:30-16:00: <b>Session 3</b></br> 
         16:00-16:15: Coffee Break</br>
         16:15-17:45: <b>Session 4</b>: Workshop</br>
         19:30 <b>Dinner by the sea</b>
-        </br>               
-        <h3>Monday, February 20 (Ariel University)</h3>
+        </br></br>               
+        <h3>Monday, February 20 </h3>
         Hosted by the Digital Pasts Lab (Ariel University) </br>
-        09:30-10:10: Opening Session & Keynote 
+        09:30-10:10: <b>Opening Session & Keynote</b></br>
         10:10-11:00: <b>Session 5</b></br>
         11:00-11:15: Coffee Break</br>
-        11:15-12:15: <b>Session 6</b>
+        11:15-12:15: <b>Session 6</b></br>
         12:15-13:30: Brunch Buffet</br>
-        13:30-14:45: <b>Session 7</b>
+        13:30-14:45: <b>Session 7</b></br>
         16:45-16:30: Coffee Break</br>
         16:30-17:45: <b>Session 8</b>
-        </br>    
-        <h3>Tuesday, February 21 (Judean Shephela)</h3>
-        08:00-13:00: <b>Tour of Lachish adn Tell Burna </b> Roundtable (hybrid)</br>
+        </br></br>    
+        <h3>Tuesday, February 21</h3>
+        08:00-13:00: <b>Tour of Lachish and Tell Burna</b></br>
         13:00-14:30: Lunch</br>
         14:30: Closing (open air) forum            
         </p>
@@ -146,15 +146,13 @@
         
         <div class="a">
           <h3>Venue</h3>
-          <a href="https://goo.gl/maps/YLc9t6rx1ySrrVsGA">
-            <h5>TAD Tel Aviv</h5></a>
+          <a href="https://datascience.tau.ac.il/" target="_blank"><h5>TAD Tel Aviv</h5></a>
             Check Point Building,<br />
             2nd floor, room #270<br />
             P.O. Box 39040, Tel Aviv
           <br />
           
-        <a href="https://goo.gl/maps/8SqhmmBJ2XAf8xz3A">
-            <h5>The Digital Pasts Lab</h5></a>
+        <a href="https://digitalpasts.github.io/" target="_blank"><h5>The Digital Pasts Lab</h5></a>
             Ariel University,<br />
             Ramat HaGolan Street 65,<br />
             4070000 Ariel, Israel
