--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <i>Advanced Computational Tools for Qumran Scroll Research</i></br>
         Nachum Dershowitz (Tel Aviv University)</br></br>
 
-        <i>Cuneiform Digital Prosopography (provisional title)  - Remote Talk</i></br>
+        <i>Digital Prosopography: Problems and Prospects  - Remote Talk</i></br>
         Laurie Pearce (UC Berkeley)</br></br>
 
         10 min. Discussion</br></br>
