--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <i>Visualizing a Cuneiform Collection - Remote talk</i></br>
         Jon Taylor (British Museum)</br></br>
 
-        <i>Of Metadata In 2D/3D Digital Cuneiform Artifacts</i></br>
+        <i>Visualisation Of Metadata In 2D/3D Digital Cuneiform Artifacts</i></br>
         Michael Wamposzyc (Edinburgh Napier University)</br></br>
 
         10 min. Discussion</br></br>
