--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <article id="program">
         <h2>Program</h2>
-        <p>You can downland the abstracts booklet <a href="C:\Users\luiss\DANES\assets\DANES_2023_Abstrac-Booklet_01.pdf">here</a></p>
+        <p>You can downland the abstracts booklet <a href=".\assets\DANES_2023_Abstrac-Booklet_01.pdf">here</a></p>
         <div class="a"
         <p>
         <h3>Sunday, February 19</h3>
