--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <article id="program">
         <h2>Program</h2>
-        <p>You can downland the abstracts booklet <a href=".\assets\DANES_2023_Abstrac-Booklet_01.pdf">here</a></p>
+        <p>You can downland the abstracts booklet <a href=".\assets\DANES_2023_Abstrac-Booklet_02.pdf">here</a></p>
         <div class="a"
         <p>
         <h3>Sunday, February 19</h3>
@@ -264,9 +264,9 @@
         <h3>Tuesday, February 21</h3>
         Archaeological Tour: “In the footsteps of Sennacherib: A tour of the Judean Shephelah”</br></br>
         <b>08:00: Bus from the Tel Aviv hotel</b></br>
-        <b>09:00: Tour of Lachish and Tel Burna</b></br>
+        <b>09:00: Tour of Bet Shemesh and Tel Azekah</b></br>
         <b>13:00: Lunch</b> </br>
-        <b>14:30: Closing (open air) forum</b></br></br>
+        <b>14:30: Closing forum</b></br></br>
         Chairs: Shai Gordin (Ariel University), Hubert Mara (University of Halle-Wittenberg) and Gabriel Stanovsky (Hebrew University of Jerusalem)
         </p>
       </div>
