--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <i>Combined Analysis of Ancient Near Eastern Texts and Images: Gains, Challenges and Risky Paths of a Computational Approach to Hittite Religious Atmosphere - Remote talk</i></br>
         Alessandra Gilibert (Università Ca' Foscari, Venice), Michele Cammarosano (Università L'Orientale, Naples), Renzo Orsini (Università Ca' Foscari, Venice)</br></br>
         
-        <i>TBD</i></br>
+        <i>MTAAC: Machine Translation and Automated Analysis of Cuneiform Languages</i></br>
         Heather D. Baker (University of Toronto)</br></br>
         
         15 min. Discussion</br></br>
