--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <h3>Tuesday, February 21</h3>
         Archaeological Tour: “In the footsteps of Sennacherib: A tour of the Judean Shephelah”</br></br>
         <b>08:00: Bus from the Tel Aviv hotel</b></br>
-        <b>09:00: Tour of Bet Shemesh and Tel Azekah</b></br>
+        <b>09:00: Tour of Bet Shemesh and Tel Azekah conducted by  <a href="https://www.israeliarchaeology.org/members/%d7%91%d7%95%d7%a2%d7%96-%d7%92%d7%a8%d7%95%d7%a1/" target="_blank">Boaz Gross</a></b></br>
         <b>13:30: Lunch</b> </br>
         <b>15:00: Closing forum</b></br></br>
         Chairs: Shai Gordin (Ariel University), Hubert Mara (University of Halle-Wittenberg) and Gabriel Stanovsky (Hebrew University of Jerusalem)
