--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <h2>Important Dates</h2>
           <p>
           <del>☐ Submission deadline for Speakers: December 1, 2022.</del><p />
-          ☐ Submission deadline for Posters: January 20, 2023.<p />
+          <del>☐ Submission deadline for Posters: January 20, 2023.</del><p />
           ☐ Conference: February 19-21.
 
           </p>
