--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         Chair: Hubert Mara (University of Halle-Wittenberg)</br></br>
         
         <i>Preparing Multi-layered Visualizations of Old Babylonian Cuneiform Tablets for an AI OCR Training towards Automated Sign Recognition</i></br>
-        Hendrik Hameeuw, Katrien De Graef, Gustav Ryberg Smidt, Anne Goddeeris  (Ghent University), Timo Homburg (Mainz University of Applied Sciences), Kris Demuynck (Ghent University)</br></br>
+        Hendrik Hameeuw (KU Leuven), Katrien De Graef, Gustav Ryberg Smidt, Anne Goddeeris (Ghent University), Timo Homburg (Mainz University of Applied Sciences), Kris Demuynck (Ghent University)</br></br>
 
         <i>Cuneiform Sign Detection & Recognition</i></br>
         Yunus Cobanoglu, Enrique Jiménez (Ludwig Maximilian University of Munich), Luis Sáenz (Ariel University and Heidelberg University)</br></br>
@@ -139,7 +139,7 @@
         <b>11:45-12:00: Coffee Break</b></br></br>
 
         <b>12:00-13:00: Session 2: Data Visualization</b></br>
-        Chair: Hendrik Hameeuw (Ghent University)</br></br>
+        Chair: Hendrik Hameeuw (KU Leuven)</br></br>
 
         <i>Visualizing a Cuneiform Collection - Remote talk</i></br>
         Jon Taylor (British Museum)</br></br>
@@ -206,7 +206,7 @@
         
         <b>12:00-12:15 Coffee Break</b></br></br>
 
-        <b>12:15-13:30 Session 7: Computational Text Analysis</b></br>
+        <b>12:15-13:30 Session 7: Computational Text Analysis</b></br>katrien
         Chair: Heather D. Baker (University of Toronto)</br></br>
 
         <i>Tracing Word Meanings in Ancient Greek and Latin: Lessons Learnt from Using Computational Methods - Remote talk</i></br>
