--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         Niek Veldhuis, Eliese-Sophia Lincke, Heather Baker, Hendrik Hameeuw</br></br>
         
         <b>16:45-17:30 Session 5: Roundtables and Posters</b></br>
-        Moderator: Stav Klein (Ariel University and TAD Center)</br></br>
+        Moderator: Stav Klein (Tel Aviv University and TAD Center)</br></br>
         
         <i>Poster presentations and roundtable discussions on critical topics in digital ANE studies</i></br></br>
 
