--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <b>10:30-10:45 Coffee Break</b></br></br>
         
         <b>10:45-12:00 Session 6: Computational Stylistics</b></br>
-        Chair: Marine Béranger (FU Berlin)</br></br>
+        Chair: Luis Sáenz (Heidelberg University/Ariel University)</br></br>
 
         <i>Independent Unsupervised Examination of the Distinction Between Texts of Priestly and Non-priestly Origins in the Books of Genesis and Exodus</i></br>
         Gideon Yoffe (Hebrew University of Jerusalem), Axel Bühler (Collège de France), Thomas Römer (Collège de France), Nachum Dershowitz, Eli Piasetzky, Israel Finkelstein (Tel Aviv University), Barak Sober (Hebrew University of Jerusalem)</br></br> 
