--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
       </div>
     </article>
 
+    <article id="registration">
+        <div>
+          <h2>Registration for Attendees</h2>
+          <p>
+          Registration for Attendees is open. Please register in the <a href="https://forms.gle/BDrNjiZsrWmebfnT9">following link</a>.
+          </p>
+        </div>
+      </article>
+
     <article id="call_for_posters">
         <div>
           <h2>Call for Posters</h2>
